Fix: Add padding to news and meal-deal h2 and float left on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,4 +197,8 @@ footer h3 {
     .news, .meal-deal {
         overflow: hidden;
     }
+    
+    .meal-deal h2 {
+        text-align: left;
+    }
 }
